--- a/src/website/index.html
+++ b/src/website/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RTLab Client Interface</title>
+    <title>Demo Client Interface</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,7 +15,7 @@
     <!-- Left sidebar navigation -->
     <div class="sidebar-menu">
         <div class="sidebar-header">
-            <div class="sidebar-logo">RTLab</div>
+            <div class="sidebar-logo">Demo</div>
         </div>
         <ul class="nav-menu">
             <li class="nav-item active" data-page="home">
@@ -27,8 +27,12 @@
                 <span>Chat</span>
             </li>
             <li class="nav-item" data-page="image-generation">
-                <i class="fa fa-commenting" aria-hidden="true"></i>
+                <i class="fa fa-film" aria-hidden="true"></i>
                 <span>Generate Image</span>
+            </li>
+            <li class="nav-item" data-page="2-3D-models">
+                <i class="fa fa-cubes" aria-hidden="true"></i>
+                <span>2-3D Models</span>
             </li>
         </ul>
     </div>
@@ -40,19 +44,20 @@
             <div id="home" class="page active">
                 <header>
                     <div class="header-content">
-                        <div class="logo">RTLab MCP Client</div>
+                        <div class="logo">Demo MCP Client</div>
                         <div id="current-model-badge" class="model-badge">No model selected</div>
                     </div>
                 </header>
 
                 <div class="box">
-                    <h1>Welcome to RTLab MCP Client</h1>
+                    <h1>Welcome to Demo MCP Client</h1>
                     <p>This client interface allows you to interact with various large language models through the
                         Ollama API.</p>
                     <p>Use the navigation menu on the left to access different features:</p>
                     <ul>
                         <li><strong>Chat:</strong> Have conversations with AI models</li>
                         <li><strong>Generate Image:</strong> Create images using AI models</li>
+                        <li><strong>2-3D Models:</strong> Generate 2-3D models (coming soon)</li>
                     </ul>
                 </div>
             </div>
@@ -117,30 +122,267 @@
 
                 <div class="box">
                     <h2>Generate Images with AI</h2>
-                    <div class="image-generation-form">
-                        <div>
-                            <label for="prompt">Enter your prompt:</label>
-                            <textarea id="prompt" rows="4" style="width: 100%; margin-top: 8px;"
-                                placeholder="Describe the image you want to generate..."></textarea>
+
+                    <div class="tabs">
+                        <div class="tab-image active" data-tab="text-to-image">Text to Image</div>
+                        <div class="tab-image" data-tab="image-to-image">Image to Image</div>
+                    </div>
+
+                    <!-- Text to Image Tab -->
+                    <div class="tab-image-content active" id="text-to-image-content">
+                        <div class="image-generation-form">
+                            <div>
+                                <label for="prompt">Enter your prompt:</label>
+                                <textarea id="prompt" rows="4" style="width: 100%; margin-top: 8px;"
+                                    placeholder="Describe the image you want to generate..."></textarea>
+                            </div>
+
+                            <div class="generation-options">
+                                <div>
+                                    <label for="image-model">Select model:</label>
+                                    <select id="image-model" style="width: 100%; margin-top: 8px;">
+                                        <option value="stabilityai/sd-turbo">Stable Diffusion</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <label for="num-steps">Number of steps:</label>
+                                    <input type="range" id="num-steps" min="1" max="3" value="1"
+                                        style="width: 100%; margin-top: 8px;">
+                                    <span id="steps-value">1</span>
+                                </div>
+                            </div>
+
+                            <div>
+                                <button id="generate-button" style="width: 150px;">Generate Image</button>
+                            </div>
+
+                            <div id="status-message" class="status-message" style="display: none;">
+                                <div class="loading"></div>
+                                <span id="status-text">Processing your request...</span>
+                            </div>
+
+                            <div class="image-sd-preview" id="image-sd-preview">
+                                <p>Image preview will appear here</p>
+                            </div>
                         </div>
-                        <div>
-                            <label for="image-model">Select model:</label>
-                            <select id="image-model" style="width: 100%; margin-top: 8px;">
-                                <option value="stable-diffusion">Stable Diffusion</option>
-                                <option value="dalle-mini">DALL-E Mini</option>
-                            </select>
+                    </div>
+
+                    <!-- Image to Image Tab -->
+                    <div class="tab-image-content" id="image-to-image-content">
+                        <div class="image-generation-form">
+                            <div class="upload-area" id="upload-area">
+                                <p>Click or drag to upload a source image</p>
+                                <input type="file" id="image-sd-upload" accept="image/*" style="display: none;">
+                            </div>
+
+                            <div id="uploaded-image-preview"
+                                style="display: none; text-align: center; margin-bottom: 20px;">
+                                <img id="source-image" style="max-width: 100%; max-height: 300px;">
+                            </div>
+
+                            <div>
+                                <label for="img2img-prompt">Enter your prompt:</label>
+                                <textarea id="img2img-prompt" rows="4" style="width: 100%; margin-top: 8px;"
+                                    placeholder="Describe how you want to transform the image..."></textarea>
+                            </div>
+
+                            <div class="generation-options">
+                                <div>
+                                    <label for="strength">Transformation strength:</label>
+                                    <input type="range" id="strength" min="0" max="1" step="0.05" value="0.75"
+                                        style="width: 100%; margin-top: 8px;">
+                                    <span id="strength-value">0.75</span>
+                                </div>
+
+                                <div>
+                                    <label for="img2img-steps">Number of steps:</label>
+                                    <input type="range" id="img2img-steps" min="1" max="3" value="1"
+                                        style="width: 100%; margin-top: 8px;">
+                                    <span id="img2img-steps-value">1</span>
+                                </div>
+                            </div>
+
+                            <div>
+                                <button id="transform-button" style="width: 150px;" disabled>Transform Image</button>
+                            </div>
+
+                            <div id="img2img-status" class="status-message" style="display: none;">
+                                <div class="loading"></div>
+                                <span id="img2img-status-text">Processing your request...</span>
+                            </div>
+
+                            <div class="image-sd-preview" id="img2img-preview">
+                                <p>Transformed image will appear here</p>
+                            </div>
                         </div>
-                        <div>
-                            <button id="generate-button" style="width: 150px;">Generate Image</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 2-3D Models page -->
+
+            <div id="2-3D-models" class="page">
+                <header>
+                    <div class="header-content">
+                        <div class="logo">2-3D Models</div>
+                    </div>
+                </header>
+
+                <div class="box">
+                    <div class="tab-container">
+                        <div class="tabs">
+                            <button class="tab-button active" data-tab="text-to-3d">Text to 3D</button>
+                            <button class="tab-button" data-tab="image-to-3d">Image to 3D</button>
                         </div>
-                        <div class="image-preview" id="image-preview">
-                            <p>Image preview will appear here</p>
+                    </div>
+
+                    <!-- Text to 3D Section -->
+                    <div id="text-to-3d" class="tab-content active">
+                        <h2>Generate 3D Models from Text</h2>
+                        <div class="model-form">
+                            <div class="form-group">
+                                <label for="model-prompt">Text Prompt:</label>
+                                <textarea id="model-prompt" placeholder="Describe the 3D object you want to create..."
+                                    rows="3"></textarea>
+                            </div>
+
+                            <div class="form-controls">
+                                <div class="form-group">
+                                    <label for="guidance-scale">Guidance Scale:</label>
+                                    <input type="range" id="guidance-scale" min="1" max="30" value="15" step="0.5">
+                                    <span id="guidance-value">15.0</span>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="render-mode">Render Mode:</label>
+                                    <select id="render-mode">
+                                        <option value="nerf">NERF (Neural Radiance Fields)</option>
+                                        <option value="stf">STF (Surface Texture Fields)</option>
+                                    </select>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="karras-steps">Quality Steps:</label>
+                                    <input type="range" id="karras-steps" min="16" max="128" value="64" step="8">
+                                    <span id="steps-value">64</span>
+                                </div>
+                            </div>
+
+                            <button id="generate-3D-button" class="primary-button">Generate 3D Model</button>
+                        </div>
+
+                        <div id="progress-container" style="display: none;">
+                            <div class="progress-bar-container">
+                                <div id="progress-bar"></div>
+                            </div>
+                            <div id="progress-status">Starting generation...</div>
+                        </div>
+
+                        <div id="results-container" style="display: none;">
+                            <h3>Results</h3>
+                            <div class="results-display">
+                                <div class="preview-container">
+                                    <h4>Preview Animation</h4>
+                                    <div id="gif-preview">
+                                        <img id="preview-gif" src="" alt="3D Model Preview">
+                                    </div>
+                                </div>
+                                <div class="model-download">
+                                    <h4>3D Model</h4>
+                                    <button id="download-obj" class="secondary-button">Download OBJ File</button>
+                                    <p class="download-info">The OBJ file can be imported into Blender, Unity, or other
+                                        3D
+                                        software.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="job-history">
+                            <h3>Recent Jobs</h3>
+                            <div id="job-list" class="job-list-container">
+                                <p>No recent jobs</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Image to 3D Section -->
+                    <div id="image-to-3d" class="tab-content">
+                        <h2>Generate 3D Models from Images</h2>
+                        <div class="model-form">
+                            <div class="form-group">
+                                <label for="image-upload">Upload Image:</label>
+                                <div class="upload-container">
+                                    <input type="file" id="image-upload" accept="image/*" class="file-input">
+                                    <div class="upload-button-container">
+                                        <button id="select-image-button" class="secondary-button">Select Image</button>
+                                        <span id="file-name">No file selected</span>
+                                    </div>
+                                </div>
+                                <div id="image-preview-container" style="display: none;">
+                                    <img id="convert-image-preview" src="" alt="Image preview">
+                                </div>
+                            </div>
+
+                            <div class="form-controls">
+                                <div class="form-group">
+                                    <label for="image-guidance-scale">Guidance Scale:</label>
+                                    <input type="range" id="image-guidance-scale" min="1" max="15" value="3" step="0.5">
+                                    <span id="image-guidance-value">3.0</span>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="image-render-mode">Render Mode:</label>
+                                    <select id="image-render-mode">
+                                        <option value="nerf">NERF (Neural Radiance Fields)</option>
+                                        <option value="stf">STF (Surface Texture Fields)</option>
+                                    </select>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="image-karras-steps">Quality Steps:</label>
+                                    <input type="range" id="image-karras-steps" min="16" max="128" value="64" step="8">
+                                    <span id="image-steps-value">64</span>
+                                </div>
+                            </div>
+
+                            <button id="generate-image-3D-button" class="primary-button">Generate 3D from Image</button>
+                        </div>
+
+                        <div id="image-progress-container" style="display: none;">
+                            <div class="progress-bar-container">
+                                <div id="image-progress-bar"></div>
+                            </div>
+                            <div id="image-progress-status">Starting generation...</div>
+                        </div>
+
+                        <div id="image-results-container" style="display: none;">
+                            <h3>Results</h3>
+                            <div class="results-display">
+                                <div class="preview-container">
+                                    <h4>Preview Animation</h4>
+                                    <div id="image-gif-preview">
+                                        <img id="image-preview-gif" src="" alt="3D Model Preview">
+                                    </div>
+                                </div>
+                                <div class="model-download">
+                                    <h4>3D Model</h4>
+                                    <button id="image-download-obj" class="secondary-button">Download OBJ File</button>
+                                    <p class="download-info">The OBJ file can be imported into Blender, Unity, or other
+                                        3D software.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="image-job-history">
+                            <h3>Recent Image-to-3D Jobs</h3>
+                            <div id="image-job-list" class="job-list-container">
+                                <p>No recent jobs</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
     <script src="../static/js/script.js"></script>
 </body>
